--- a/AffiliateWindowWPF/MainWindow.xaml
+++ b/AffiliateWindowWPF/MainWindow.xaml
@@ -16,13 +16,17 @@
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="30"></RowDefinition>
             </Grid.RowDefinitions>
-            <DataGrid x:Name="MerchantsDataGrid" Grid.Row="0" Grid.Column="0" ItemsSource="{Binding}">
-                <DataGridTextColumn Header="ID" Binding="{Binding ID}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}"></DataGridTextColumn>
+            <DataGrid x:Name="MerchantsDataGrid" Grid.Row="0" Grid.Column="0" ItemsSource="{Binding}" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID" Binding="{Binding ID}" Width="*"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*"></DataGridTextColumn>
+                </DataGrid.Columns>
             </DataGrid>
-            <DataGrid x:Name="ProductsDataGrid" Grid.Row="0" Grid.Column="0" ItemsSource="{Binding}">
-                <DataGridTextColumn Header="ID" Binding="{Binding ID}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}"></DataGridTextColumn>
+            <DataGrid x:Name="ProductsDataGrid" Grid.Row="0" Grid.Column="1" ItemsSource="{Binding}" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID" Binding="{Binding ID}" Width="*"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*"></DataGridTextColumn>
+                </DataGrid.Columns>
             </DataGrid>
             <Button Grid.Row="1" Grid.Column="0" Click="ShowMerchantsClick">Show Merchants</Button>
             <Button Grid.Row="1" Grid.Column="1" Click="ShowProductsClick">Show Products</Button>
